GNOME Bugzilla – Bug 633978
unable to see the letter choices when using the configuration/administration menu
Last modified: 2010-11-04 21:13:13 UTC
Created attachment 173818 [details] screen capture of the error in missing letter activity in the activity missing_letter when you choose the configuration option in the game or when you are inside the administration menu and you choose to add/change a choice then you are not able to see the letters used for the choices. this is when you are using the hebrew language. Also it happens either you are using Linux, windows xp or windows 7
fixed in commit 7f0acc90