Fixed long standing bug in missing letter configuration for 2 bytes utf8 char.

fixes bug https://bugzilla.gnome.org/show_bug.cgi?id=633978